--- a/plugins/launcher/launcher-dialog.glade
+++ b/plugins/launcher/launcher-dialog.glade
@@ -87,7 +87,6 @@
                       <object class="GtkTreeView" id="item-treeview">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="model">item-store</property>
                         <property name="headers_visible">False</property>
                         <property name="rules_hint">True</property>
                         <property name="enable_search">False</property>
@@ -136,7 +135,6 @@
                               <object class="GtkImage" id="image2">
                                 <property name="visible">True</property>
                                 <property name="stock">gtk-go-up</property>
-                                <property name="icon-size">4</property>
                               </object>
                             </child>
                           </object>
@@ -155,7 +153,6 @@
                               <object class="GtkImage" id="image3">
                                 <property name="visible">True</property>
                                 <property name="stock">gtk-go-down</property>
-                                <property name="icon-size">4</property>
                               </object>
                             </child>
                           </object>
@@ -174,7 +171,6 @@
                               <object class="GtkImage" id="image4">
                                 <property name="visible">True</property>
                                 <property name="stock">gtk-add</property>
-                                <property name="icon-size">4</property>
                               </object>
                             </child>
                           </object>
@@ -193,7 +189,6 @@
                               <object class="GtkImage" id="image10">
                                 <property name="visible">True</property>
                                 <property name="stock">gtk-new</property>
-                                <property name="icon-size">4</property>
                               </object>
                             </child>
                           </object>
@@ -211,7 +206,6 @@
                               <object class="GtkImage" id="image9">
                                 <property name="visible">True</property>
                                 <property name="stock">gtk-delete</property>
-                                <property name="icon-size">4</property>
                               </object>
                             </child>
                           </object>
@@ -230,7 +224,6 @@
                               <object class="GtkImage" id="image1">
                                 <property name="visible">True</property>
                                 <property name="stock">gtk-edit</property>
-                                <property name="icon-size">4</property>
                               </object>
                             </child>
                           </object>
@@ -323,7 +316,6 @@
                     <child>
                       <object class="GtkComboBox" id="arrow-position">
                         <property name="visible">True</property>
-                        <property name="model">arrow-position-model</property>
                         <child>
                           <object class="GtkCellRendererText" id="cellrenderertext1"/>
                           <attributes>
@@ -375,6 +367,8 @@
                 <property name="use_stock">True</property>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">0</property>
                 <property name="secondary">True</property>
               </packing>
@@ -388,6 +382,8 @@
                 <property name="use_stock">True</property>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">1</property>
               </packing>
             </child>
@@ -411,7 +407,6 @@
     <property name="destroy_with_parent">True</property>
     <property name="icon_name">applications-other</property>
     <property name="type_hint">normal</property>
-    <property name="transient_for">dialog</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox3">
@@ -662,6 +657,8 @@
                 <property name="use_stock">True</property>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">0</property>
               </packing>
             </child>
@@ -674,6 +671,8 @@
                 <property name="use_stock">True</property>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">1</property>
               </packing>
             </child>
@@ -699,7 +698,6 @@
     <property name="destroy_with_parent">True</property>
     <property name="icon_name">gtk-add</property>
     <property name="type_hint">normal</property>
-    <property name="transient_for">dialog</property>
     <property name="has_separator">False</property>
     <property name="subtitle" translatable="yes">Add one or more existing items to the launcher</property>
     <child internal-child="vbox">
@@ -753,7 +751,6 @@
                   <object class="GtkTreeView" id="add-treeview">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="model">add-store-filter</property>
                     <property name="headers_visible">False</property>
                     <property name="rules_hint">True</property>
                     <property name="enable_search">False</property>
@@ -800,6 +797,8 @@
                 <property name="use_stock">True</property>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">0</property>
               </packing>
             </child>
@@ -812,6 +811,8 @@
                 <property name="use_stock">True</property>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">1</property>
               </packing>
             </child>
