Update pot file and fix non-translatable strings.

--- a/panel/panel-preferences-dialog.glade
+++ b/panel/panel-preferences-dialog.glade
@@ -667,7 +667,7 @@
             <property name="layout_style">end</property>
             <child>
               <object class="GtkButton" id="button-close">
-                <property name="label" translatable="yes">gtk-close</property>
+                <property name="label">gtk-close</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
@@ -681,7 +681,7 @@
             </child>
             <child>
               <object class="GtkButton" id="button-help">
-                <property name="label" translatable="yes">gtk-help</property>
+                <property name="label">gtk-help</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
