--- a/plugins/separator/separator-dialog.ui
+++ b/plugins/separator/separator-dialog.ui
@@ -148,6 +148,9 @@
       <row>
         <col id="0" translatable="yes">Dots</col>
       </row>
+      <row>
+        <col id="0" translatable="yes">New Line</col>
+      </row>
     </data>
   </object>
 </interface>
