--- a/plugins/launcher/launcher-dialog.ui
+++ b/plugins/launcher/launcher-dialog.ui
@@ -39,6 +39,8 @@
       <column type="GObject"/>
       <!-- column-name search -->
       <column type="gchararray"/>
+      <!-- column-name tooltip -->
+      <column type="gchararray"/>
     </columns>
   </object>
   <object class="GtkListStore" id="item-store">
@@ -322,6 +324,7 @@
                     <child>
                       <object class="GtkComboBox" id="arrow-position">
                         <property name="visible">True</property>
+                        <property name="model">arrow-position-model</property>
                         <child>
                           <object class="GtkCellRendererText" id="cellrenderertext1"/>
                           <attributes>
@@ -474,6 +477,7 @@
                     <property name="headers_visible">False</property>
                     <property name="rules_hint">True</property>
                     <property name="enable_search">False</property>
+                    <property name="tooltip_column">4</property>
                     <child>
                       <object class="GtkTreeViewColumn" id="treeviewcolumn1">
                         <property name="spacing">2</property>
