Improve combo box strings in tasklist.

--- a/plugins/tasklist/tasklist-dialog.ui
+++ b/plugins/tasklist/tasklist-dialog.ui
@@ -350,13 +350,13 @@
         <col id="0" translatable="yes">Timestamp</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Group name and timestamp</col>
+        <col id="0" translatable="yes">Group title and timestamp</col>
       </row>
       <row>
         <col id="0" translatable="yes">Window title</col>
       </row>
       <row>
-        <col id="0" translatable="yes">Group- and window title</col>
+        <col id="0" translatable="yes">Group title and window title</col>
       </row>
     </data>
   </object>
