--- a/plugins/tasklist/tasklist-dialog.ui
+++ b/plugins/tasklist/tasklist-dialog.ui
@@ -73,6 +73,43 @@
                             <property name="position">2</property>
                           </packing>
                         </child>
+                        <child>
+                          <object class="GtkHBox" id="hbox2">
+                            <property name="visible">True</property>
+                            <property name="spacing">12</property>
+                            <child>
+                              <object class="GtkLabel" id="label5">
+                                <property name="visible">True</property>
+                                <property name="label" translatable="yes">Sorting _order:</property>
+                                <property name="use_underline">True</property>
+                                <property name="mnemonic_widget">sort-order</property>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkComboBox" id="sort-order">
+                                <property name="visible">True</property>
+                                <property name="model">sort-order-model</property>
+                                <child>
+                                  <object class="GtkCellRendererText" id="cellrenderertext1"/>
+                                  <attributes>
+                                    <attribute name="text">0</attribute>
+                                  </attributes>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="position">1</property>
+                              </packing>
+                            </child>
+                          </object>
+                          <packing>
+                            <property name="position">3</property>
+                          </packing>
+                        </child>
                       </object>
                     </child>
                   </object>
@@ -117,6 +154,7 @@
                                 <property name="xalign">0</property>
                                 <property name="label" translatable="yes">Window _grouping:</property>
                                 <property name="use_underline">True</property>
+                                <property name="mnemonic_widget">grouping</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -299,6 +337,26 @@
       </row>
       <row>
         <col id="0" translatable="yes">Always</col>
+      </row>
+    </data>
+  </object>
+  <object class="GtkListStore" id="sort-order-model">
+    <columns>
+      <!-- column-name title -->
+      <column type="gchararray"/>
+    </columns>
+    <data>
+      <row>
+        <col id="0" translatable="yes">Timestamp</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">Group name and timestamp</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">Window title</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">Group- and window title</col>
       </row>
     </data>
   </object>
