Add Xfconf based kiosk locking to the panel.
Each panel can be locked individually though Xfconf and
new API function xfce_panel_plugin_get_locked() for plugins;
although it might be safer for plugins to directly check the
Xfconf channel.

--- a/panel/panel-preferences-dialog.glade
+++ b/panel/panel-preferences-dialog.glade
@@ -229,7 +229,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkCheckButton" id="locked">
+                                  <object class="GtkCheckButton" id="position-locked">
                                     <property name="label" translatable="yes">_Lock panel</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
