--- a/plugins/systray/systray-dialog.glade
+++ b/plugins/systray/systray-dialog.glade
@@ -11,10 +11,14 @@
       <column type="gchararray"/>
       <!-- column-name hidden -->
       <column type="gboolean"/>
+      <!-- column-name internal-name -->
+      <column type="gchararray"/>
     </columns>
   </object>
   <object class="XfceTitledDialog" id="dialog">
     <property name="title" translatable="yes">Notification Area</property>
+    <property name="default_width">325</property>
+    <property name="default_height">425</property>
     <property name="icon_name">gtk-properties</property>
     <property name="type_hint">normal</property>
     <property name="has_separator">False</property>
@@ -167,11 +171,11 @@
                                 </child>
                                 <child>
                                   <object class="GtkTreeViewColumn" id="treeviewcolumn3">
-                                    <property name="title">Visible</property>
+                                    <property name="title">Hidden</property>
                                     <child>
-                                      <object class="GtkCellRendererToggle" id="cellrenderertoggle1"/>
+                                      <object class="GtkCellRendererToggle" id="hidden-toggle"/>
                                       <attributes>
-                                        <attribute name="activatable">2</attribute>
+                                        <attribute name="active">2</attribute>
                                       </attributes>
                                     </child>
                                   </object>
